--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </div>
   </body>
   <script>
-    //code here
+    const input = document.getElementById("input");
+    const output = document.getElementById("output");
+
+    function update(){
+      output.innerText = input.value
+    }
   </script>
 </html>
